--- a/src/main/asciidoc/metrics.adoc
+++ b/src/main/asciidoc/metrics.adoc
@@ -40,6 +40,7 @@ that are specific for that particular http server.
 [source,java]
 ----
 var server = vertx.createHttpServer();
+// set up server
 var metrics = server.metrics();
 
 ----
