--- a/src/main/asciidoc/shareddata.adoc
+++ b/src/main/asciidoc/shareddata.adoc
@@ -23,14 +23,25 @@ Here's an example of using a shared local map:
 [source,java]
 ----
 var Buffer = require("vertx-js/buffer");
+
 var sd = vertx.sharedData();
+
 var map1 = sd.getLocalMap("mymap1");
+
 map1.put("foo", "bar");
+
 var map2 = sd.getLocalMap("mymap2");
+
 map2.put("eek", Buffer.buffer().appendInt(123));
+
+// Then... in another part of your application:
+
 map1 = sd.getLocalMap("mymap1");
+
 var val = map1.get("foo");
+
 map2 = sd.getLocalMap("mymap2");
+
 var buff = map2.get("eek");
 
 ----
@@ -50,13 +61,16 @@ Getting the map is asynchronous and the result is returned to you in the handler
 
 [source,java]
 ----
+
 var sd = vertx.sharedData();
+
 sd.getClusterWideMap("mymap", function (res, res_err) {
   if ((res != null)) {
     var map = res;
   } else {
   };
 });
+
 
 ----
 
@@ -68,11 +82,13 @@ The actual put is asynchronous and the handler is notified once it is complete:
 
 [source,java]
 ----
+
 map.put("foo", "bar", function (resPut, resPut_err) {
   if ((resPut != null)) {
   } else {
   };
 });
+
 
 ----
 
@@ -84,12 +100,15 @@ The actual get is asynchronous and the handler is notified with the result some 
 
 [source,java]
 ----
+
 map.get("foo", function (resGet, resGet_err) {
   if ((resGet != null)) {
+    // Successfully got the value
     var val = resGet;
   } else {
   };
 });
+
 
 ----
 
@@ -121,9 +140,14 @@ another caller can obtain it.
 ----
 sd.getLock("mylock", function (res, res_err) {
   if ((res != null)) {
+    // Got the lock!
     var lock = res;
+
+    // 5 seconds later we release the lock so someone else can get it
+
     vertx.setTimer(5000, function (tid) {
       lock.release()});
+
   } else {
   };
 });
@@ -137,7 +161,9 @@ with a failure:
 ----
 sd.getLockWithTimeout("mylock", 10000, function (res, res_err) {
   if ((res != null)) {
+    // Got the lock!
     var lock = res;
+
   } else {
   };
 });
